--- a/layout_Loja/bolos.html
+++ b/layout_Loja/bolos.html
@@ -15,14 +15,19 @@
 
     <!-- Custom styles for this template -->
     <link href="css/shop-homepage.css" rel="stylesheet">
+    <style>
+    .container{
+      background-color: #596f7c ;
+    }
+    </style>
 
   </head>
 
   <body>
 
     <!-- Navigation on top -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      
         <a class="navbar-brand" href="#"> Vanilla </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,70 +39,47 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="sobre.html">Sobre</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="servicos">Serviços</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contato.html">Contato</a>
-            </li>
           </ul>
         </div>
       </div>
     </nav>
-
     <!-- Página de conteúdo  -->
-    <div class="container">
 
-      <div class="row">
+  <div class= container>
+    <div class="col-lg-9">
 
-        <div class="col-lg-3">
-
-          <img src="imagens/logo.png" width= "250" height= "100">
-          <div class="list-group">
-            <a href="bolos.html" class="list-group-item"> Bolos </a>
-            <a href="docinhos.html" class="list-group-item"> Docinhos </a>
-            <a href="tortas.html" class="list-group-item"> Tortas </a>
-            <a href="chocolates.html" class="list-group-item"> Chocolates </a>
-            <a href="docesgelados.html" class="list-group-item"> Doces Gelados </a>
+      <div1 class="row">
+          <div class="col-lg-4">
+           <a> 
+             <img src="css/imagens/bolosicon.png">
+           </a>
+            <h2>Bolos</h2>
+            <p><a class="btn btn-secondary" href="bolos.html" role="button">Saber mais... &raquo;</a></p>
           </div>
-
+          <div class="col-lg-4">
+              <a> 
+                  <img src="css/imagens/docinhosicon.png">
+              </a>
+            <h2>Doces</h2>
+            <p><a class="btn btn-secondary" href="docinhos.html" role="button">Saber mais... &raquo;</a></p>
+          </div>
+          <div class="col-lg-4">
+              <a> 
+                  <img src="css/imagens/torta.png">
+                </a>
+            <h2>Tortas</h2>
+            <p><a class="btn btn-secondary" href="tortas.html" role="button">Saber mais... &raquo;</a></p>
+          </div>
         </div>
+      </div>
+  
+
+    
+  
         <!-- /.col-lg-3 -->
 
         <div class="col-lg-9">
-		
-		 <!-- carousel inicio -->
-
-          <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img class="d-block img-fluid" src="imagens/foto1.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" src="imagens/foto2.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block img-fluid" src="imagens/foto3.jpg" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Próximo</span>
-            </a>
-          </div> 
-		  <!-- carousel fim -->
+	
 
           <div class="row">
 
