Atualização de algumas partes de escrita, alteração na parte de Home e mudança de algumas imagens

--- a/layout_Loja11/bolos.html
+++ b/layout_Loja11/bolos.html
@@ -34,7 +34,6 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -124,7 +123,7 @@
                 <a href="#"> Cupcake </a>
               </h4>
               <h5>R$4.00</h5>
-              <p class="card-text"> Cupcake com massa super leve e macia de chocolate, cobertura de mousse de leite ninho e decorado com delicadas miçangas de açucar.</p>
+              <p class="card-text"> Cupcake com massa superleve e macia de chocolate, cobertura de mousse de leite ninho e decorado com delicadas miçangas de açúcar.</p>
             </div>
           </div>
         </div>
@@ -137,7 +136,7 @@
                 <a href="#"> Cupcake Vanilla </a>
               </h4>
               <h5>R$4.00</h5>
-              <p class="card-text"> Cupcake com uma massa leve de baunilha e cobertura de brigadeiro branco, decorado com pequenas miçangas de açucar coloridas.</p>
+              <p class="card-text"> Cupcake com uma massa leve de baunilha e cobertura de brigadeiro branco, decorado com pequenas miçangas de açúcar coloridas.</p>
             </div>
           </div>
         </div>
@@ -150,7 +149,7 @@
                 <a href="#"> Velvet Cupcake </a>
               </h4>
               <h5>R$5.00</h5>
-              <p class="card-text"> Cupcake com uma massa de bolo leve com uma linda cor vermelha e um leve sabor de chocolate, perfeitamente úmidos e coberto com cobertura de cream cheese</p>
+              <p class="card-text"> Cupcake com uma massa de bolo leve com uma linda cor vermelha e um leve sabor de chocolate, perfeitamente úmido e coberto com cobertura de cream cheese</p>
             </div>
           </div>
         </div>
@@ -176,7 +175,7 @@
                 <a href="#"> Muffins de Brownie </a>
               </h4>
               <h5>R$7.00</h5>
-              <p class="card-text"> Mini Muffins de Brownie com massa fofinha e macia recheados com gotas de chocolate.</p>
+              <p class="card-text"> Minimuffins de Brownie com massa fofinha e macia recheados com gotas de chocolate.</p>
             </div>
           </div>
         </div>
@@ -189,7 +188,7 @@
                 <a href="#"> Brownie na Caneca </a>
               </h4>
               <h5>R$10.00</h5>
-              <p class="card-text"> Brownie com massa super fofinha na caneca com cobertura de doce de leite.</p>
+              <p class="card-text"> Brownie com massa superfofinha na caneca com cobertura de doce de leite.</p>
             </div>
           </div>
         </div>
