--- a/layout_Loja11/docinhos.html
+++ b/layout_Loja11/docinhos.html
@@ -35,7 +35,6 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -83,7 +82,7 @@
               <a href="#"><img class="card-img-top" src="css/img/d1.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#"> surpresinha de uva </a>
+                  <a href="#"> Surpresinha de uva </a>
                 </h4>
                 <h5>R$0.50</h5>
                 <p class="card-text"> Docinho de brigadeiro de leite ninho com recheio de uva.</p>
@@ -109,10 +108,10 @@
             <a href="#"><img class="card-img-top" src="css/img/d3.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#"> Mini copinhos recheados</a>
+                <a href="#"> Minicopinhos recheados</a>
               </h4>
               <h5>R$1.00</h5>
-              <p class="card-text"> Mini copinhos recheados com brigadeiro de paçoca super cremoso. </p>
+              <p class="card-text"> Minicopinhos recheados com brigadeiro de paçoca supercremoso. </p>
             </div>
           </div>
         </div>
@@ -135,10 +134,10 @@
             <a href="#"><img class="card-img-top" src="css/img/d5.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#"> Mini trufas decoradas </a>
+                <a href="#"> Minitrufas decoradas </a>
               </h4>
               <h5>R$2.50</h5>
-              <p class="card-text"> Mini trufas para festas decoradas com cobertura de chocolate e recehios cremosos de todos os tipos como brigadeiro, beijinho, leite ninho, romance etc...</p>
+              <p class="card-text"> Minitrufas para festas decoradas com cobertura de chocolate e recehios cremosos de todos os tipos como brigadeiro, beijinho, leite ninho, romance etc...</p>
             </div>
           </div>
         </div>
@@ -177,7 +176,7 @@
                 <a href="#"> Potinho Floresta Negra </a>
               </h4>
               <h5>R$2.50</h5>
-              <p class="card-text"> Mini potinho de chocolate rechado com brigadeiro cremoso e cerejas frescas.</p>
+              <p class="card-text"> Minipotinho de chocolate rechado com brigadeiro cremoso e cerejas frescas.</p>
             </div>
           </div>
         </div>
@@ -190,7 +189,7 @@
                 <a href="#"> Cone Trufado </a>
               </h4>
               <h5>R$5.00</h5>
-              <p class="card-text"> Cones Trufado com recheios variados e decorações incríveis e únicas.</p>
+              <p class="card-text"> Cones Trufados com recheios variados e decorações incríveis e únicas.</p>
             </div>
           </div>
         </div>
