--- a/layout_Loja11/index.html
+++ b/layout_Loja11/index.html
@@ -55,9 +55,10 @@ body{
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="direita">
         <div class="nav navbar-nav">
-          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(Página atual)</span></a>
           <a class="nav-item nav-link" href="contato.html">Contato</a>          
+        </div>
         </div>
     </nav>
     <div class="container.fluid">   
@@ -72,7 +73,7 @@ body{
 </div>
 
 <h3>Um Pouco Sobre Nós...</h3>
-<p>Nós somos uma empresa destinada a fabricação<br> e venda de diversos doces<br> confeitados, alguns deles são Bolos, Tortas,<br> Cones, Brigadeiros, entre outras<br> maravilhas da Confeitaria. </p>
+<p>Nós somos uma empresa destinada a fabricação<br> e venda de diversos doces confeitados, <br> alguns deles são: <br> Bolos, Doces e Tortas, <br> entre outras maravilhas da Confeitaria. </p>
 
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: 700px; height:700px; margin: 10px" >
@@ -148,7 +149,7 @@ body{
         <div class="card">
           <img src="css/imagens/card2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Bom-Bom</h5>
+            <h5 class="card-title">Bombom</h5>
             <p class="card-text"></p>
           </div>
           <div class="card-footer">
