--- a/layout_Loja11/tortas.html
+++ b/layout_Loja11/tortas.html
@@ -35,7 +35,6 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -99,7 +98,7 @@
                 <a href="#"> Torta Marta Rocha </a>
               </h4>
               <h5>R$50.00</h5>
-              <p class="card-text">  Torta super deliciosa com massa de bolo claro e chocolate, creme de ovos moles, suspiros, nozes e também chantilly. A dureza dos crocantes tem contrastes com o maciço do pão de ló, e o cremoso do chantilly, e ainda o etéreo do suspiro, os discos de merengue </p>
+              <p class="card-text">  Torta superdeliciosa com massa de bolo claro e chocolate, creme de ovos moles, suspiros, nozes e também chantilly. A dureza dos crocantes tem contrastes com o maciço do pão de ló e o cremoso do chantilly e ainda o etéreo do suspiro, os discos de merengue </p>
             </div>
           </div>
         </div>
@@ -125,7 +124,7 @@
                 <a href="#"> Torta de frutas vermelhas e nozes </a>
               </h4>
               <h5>R$65.00</h5>
-              <p class="card-text"> Torta com massa super crocante discoito e nozes, recheado com uma deliciosa geleia de frutas vermelhas.</p>
+              <p class="card-text"> Torta com massa supercrocante biscoito e nozes, recheado com uma deliciosa geleia de frutas vermelhas.</p>
             </div>
           </div>
         </div>
@@ -135,7 +134,7 @@
             <a href="#"><img class="card-img-top" src="css/img/t5.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#"> Torta de maça </a>
+                <a href="#"> Torta de maçã </a>
               </h4>
               <h5>R$40.00</h5>
               <p class="card-text"> Torta com uma leve massa folhada, com cobertura de geleia de maçã e decorado com pequenas fatias de maçã fresca.</p>
@@ -164,7 +163,7 @@
                 <a href="#"> Tortinha de morango com cream cheese</a>
               </h4>
               <h5>R$10.00</h5>
-              <p class="card-text"> Torta com massa super crocante, recheio de cream cheese cremoso e cobertura de geleia de morango. </p>
+              <p class="card-text"> Torta com massa supercrocante, recheio de cream cheese cremoso e cobertura de geleia de morango. </p>
             </div>
           </div>
         </div>
@@ -177,7 +176,7 @@
                 <a href="#"> Torta de Brownie com doce de leite</a>
               </h4>
               <h5>R$45.00</h5>
-              <p class="card-text"> Uma deliciosa torta com massa fofinha e macia de brownie e cobertura vremosa de doce de leite.</p>
+              <p class="card-text"> Uma deliciosa torta com massa fofinha de brownie e cobertura cremosa de doce de leite.</p>
             </div>
           </div>
         </div>
@@ -190,7 +189,7 @@
                 <a href="#"> Torta Bonoffee</a>
               </h4>
               <h5>R$40.00</h5>
-              <p class="card-text"> Torta com uma deliciosa massa de biscoitos amanteigados, com recehio de bananas e doce de leite e cobertura cremosa de chantilly.</p>
+              <p class="card-text"> Torta com uma deliciosa massa de biscoitos amanteigados, com recheio de bananas e doce de leite e cobertura cremosa de chantilly.</p>
             </div>
           </div>
         </div>
