Alteração nos cards7,8,9 e no index h5

--- a/layout_Loja11/index.html
+++ b/layout_Loja11/index.html
@@ -35,6 +35,8 @@ body{
   h3{text-align: right; right: 220px; color: rgb(179, 0, 255); font-family: "Comic Sans MS", "sans-serif", "cursive"; font-style: italic; font-size: 30px; font-variant: small-caps; position: relative;}
 
   p{text-align: right; right: 50px; text-align: justify; text-align: center; color: gray; font-family: "traditial", "sans-serif", "graduate"; font-style: italic; font-size: 28px; font-variant: small-caps; position: relative; position: absolute;}
+
+  h5{text-align: center;}
       </style>
 
 
